Rename index, remove draggable js, add documentation

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,4 @@ node_modules
 .vscode/*
 
 # IDEA user files
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/dictionaries
-.idea/**/shelf
+.idea/*
